--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             border: green 3px solid;
             position: absolute;
             left: 0;
-            top: 0;
+            top: -150px;
             z-index: 1000;
         }
     </style>
