--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,10 @@
             top: -150px;
             z-index: 1000;
         }
+        button {
+            width: 20%;
+            font-size: 150%;
+        }
     </style>
 </head>
 
